[package]
name = "amni-control"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"
description = "Rust input daemon for Amni-Connect (E2EE remote desktop)"
repository = "https://github.com/amnibro/Amni-Connect"
authors = ["Amnibro (Amni-Scient) <amnibro7@gmail.com>"]

[dependencies]
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "amni-control"
path = "src/main.rs"
